--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>Admerk Corp</title>
+  <title>Admerk Corp Inc.</title>
 </head>
 
 <body>
